User customizable label on !ProgressBar, fixes #4322 !strict.  It's unclear why we used to set visibility:hidden on the progress bar label, rather than just inserting an &nbsp.   (Need to do something though so the !ProgressBar doesn't have 0 height.)
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22522 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -721,10 +721,6 @@ DIV.dijitArrowButton {
 	height:1.6em;
 }
 
-.dijitProgressBarIndeterminate .dijitProgressBarLabel {
-	visibility:hidden;
-}
-
 .dijitProgressBarIndeterminate .dijitProgressBarTile {
 	/* animated gif for 'indeterminate' mode */
 }
